# cloudflare-assignment

./: package.json
api/: .gitignore  Cargo.toml  wrangler.toml
api/src/: claims.rs  lib.rs  post.rs
auth/: Cargo.toml  wrangler.toml
auth-js/: package.json  wrangler.toml
auth/src/: authenticator.rs  lib.rs
pages/src/routes/: index.svelte  post.svelte
src/: app.html
src/routes/: __layout.svelte  post.svelte
